#NCNN
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(NCNN_BUILD_ARCHITECTURE "x64_debug")
endif ()
set(NCNN_BUILD_ARCHITECTURE "x64")
set(NCNN_BUILD_ARCHITECTURE_X64_RELEASE_PATH "C:/Users/RisingEntropy/C_libs/ncnn/x64")
set(NCNN_BUILD_ARCHITECTURE_X64_DEBUG_RELEASE_PATH "C:/Users/RisingEntropy/C_libs/ncnn/x64_debug")
set(NCNN_BUILD_ARCHITECTURE_X86_RELEASE_PATH "C:/Users/RisingEntropy/C_libs/ncnn/x86")
set(NCNN_BUILD_ARCHITECTURE_ARM_RELEASE_PATH "C:/Users/RisingEntropy/C_libs/ncnn/arm")
set(NCNN_BUILD_ARCHITECTURE_ARM64_RELEASE_PATH "C:/Users/RisingEntropy/C_libs/ncnn/arm64")
if (NCNN_BUILD_ARCHITECTURE STREQUAL "x64")
    set(NCNN_BASE_PATH ${NCNN_BUILD_ARCHITECTURE_X64_RELEASE_PATH})
    set(CMAKE_BUILD_TOOL "Release")
elseif (NCNN_BUILD_ARCHITECTURE STREQUAL "x64_debug")
    set(NCNN_BASE_PATH ${NCNN_BUILD_ARCHITECTURE_X64_DEBUG_RELEASE_PATH})
    set(CMAKE_BUILD_TOOL "Debug")
elseif (NCNN_BUILD_ARCHITECTURE STREQUAL "x86")
    set(NCNN_BASE_PATH ${NCNN_BUILD_ARCHITECTURE_X86_RELEASE_PATH})
    set(CMAKE_BUILD_TOOL "Release")
elseif (NCNN_BUILD_ARCHITECTURE STREQUAL "arm")
    set(NCNN_BASE_PATH ${NCNN_BUILD_ARCHITECTURE_ARM_RELEASE_PATH})
    set(CMAKE_BUILD_TOOL "Release")
elseif (NCNN_BUILD_ARCHITECTURE STREQUAL "arm64")
    set(NCNN_BASE_PATH ${NCNN_BUILD_ARCHITECTURE_ARM64_RELEASE_PATH})
    set(CMAKE_BUILD_TOOL "Release")
endif ()
set(DNCNN_OPENMP=OFF)
message(STATUS "Current build mode:${NCNN_BUILD_ARCHITECTURE}, base path:${NCNN_BASE_PATH}")
include_directories("${NCNN_BASE_PATH}/include")
set(ncnn_DIR "${NCNN_BASE_PATH}/lib/cmake/ncnn" CACHE PATH "${NCNN_BASE_PATH}/lib/cmake/ncnn")
find_package(ncnn REQUIRED)
target_link_libraries(${PROJECT_NAME} ncnn)

# openCV
set(OpenCV_DIR "C:/Users/RisingEntropy/C_libs/opencv/build")
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )